# bgt60tr13c_ros2

./: .gitignore  README.md
bgt60tr13c_driver/: package.xml  setup.cfg  setup.py
bgt60tr13c_driver/bgt60tr13c_driver/: radar_node.py  radar_surface_detection_node.py  radar_surface_detection_onnx_node.py  raw_frame_viz.py  raw_frame_viz_cmap.py
bgt60tr13c_driver/config/: best_model.pth  notes.md  qrsd.onnx  radar.yaml  radar_medium.yaml  rsd.pth
bgt60tr13c_driver/launch/: radar.launch.py  radar_surface_detection.launch.py
bgt60tr13c_msgs/: CMakeLists.txt  package.xml
bgt60tr13c_msgs/msg/: DeviceConfig.msg  RawFrame.msg
